# smartthings-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  temp.json.example  test_server.py
.claude/skills/smartthings/: SKILL.md
.claude/skills/smartthings/scripts/: climate_control.py  device_status.py  light_control.py  list_devices.py  switch_control.py
examples/: oauth_example.py
src/cli/: __init__.py  update_oauth.py
src/smartthings_agent/: __init__.py  __main__.py  handler.py
src/smartthings_mcp/: __init__.py  __main__.py  client.py  oauth.py  oauth_setup.py  server.py
tests/: __init__.py  test_smartthings_agent.py
