[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartthings-mcp"
version = "0.1.0"
description = "MCP server for SmartThings API integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv==1.2.1",
]

[project.scripts]
smartthings-mcp = "smartthings_mcp.server:main"
smartthings-oauth-setup = "smartthings_mcp.oauth_setup:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["smartthings_mcp"]

[tool.setuptools.package-data]
smartthings_mcp = ["py.typed"]
